Update README for JAVAFX